<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewPersonActivity">

    <Button
            android:text="@string/addPerson"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:textSize="20sp"
            app:cornerRadius="25dp"
            android:id="@+id/addPersonButton"
            android:checkable="false"
            android:clickable="true"
            android:longClickable="false"
            android:focusable="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            style="@style/WSB"
            android:hapticFeedbackEnabled="true"
            android:backgroundTint="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personPosition"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="35dp" />

    <Button
            android:text="@string/scanFace"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:textSize="20sp"
            app:cornerRadius="25dp"
            android:id="@+id/scanFaceButton"
            android:checkable="false"
            android:clickable="true"
            android:longClickable="false"
            android:focusable="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            style="@style/WSB"
            android:hapticFeedbackEnabled="true"
            android:backgroundTint="#99A8A8A8"
            app:layout_constraintTop_toBottomOf="@+id/personPosition"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="12"
            android:hint="@string/first_name"
            android:id="@+id/personFirstName"
            android:importantForAutofill="yes"
            android:autofillHints="First name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="80dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="12"
            android:hint="@string/last_name"
            android:id="@+id/personLastName"
            android:importantForAutofill="yes"
            android:autofillHints="Last name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personFirstName"
            android:layout_marginTop="50dp"
            app:layout_constraintHorizontal_bias="0.497" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="12"
            android:hint="@string/email"
            android:id="@+id/personEmail"
            android:importantForAutofill="yes"
            android:autofillHints="Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/personLastName"
            android:layout_marginTop="50dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="12"
            android:hint="@string/phone"
            android:id="@+id/personPhone"
            android:importantForAutofill="yes"
            android:autofillHints="Phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personEmail"
            android:layout_marginTop="50dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="12"
            android:hint="@string/position"
            android:id="@+id/personPosition"
            android:importantForAutofill="yes"
            android:autofillHints="Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintTop_toBottomOf="@+id/personPhone"
            android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>